--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "infix-to-postfix-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://charles-young.github.io/infix-to-postfix-react",
   "dependencies": {
     "ajv": "^6.5.4",
     "react": "^16.6.0",
@@ -11,6 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -22,5 +25,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
